src/scss/layout/_share.scss
.share {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-top: 1px solid $color-line;
  margin: 0 20px 0 20px;
  // & .collapsable__header {
  //   display: flex;
  //   justify-content: center;
  //   padding-top: 10px;
  //   width: 100%;
  // }
  // & .fa-share-alt {
  //   width: 16px;
  //   height: 18px;
  //   color: $color-icons;
  //   font-size: 18px;
  //   font-weight: normal;
  //   font-stretch: normal;
  //   font-style: normal;
  //   line-height: normal;
  //   letter-spacing: normal;
  //   text-align: center;
  //   margin-right: 12px;
  // }
  // & .tittle__collapsable {
  //   text-transform: uppercase;
  //   font-family: $font-second;
  //   font-size: 18px;
  //   color: $color-cards-text;
  //   // margin-right: 100px;
  // }
  // & .fa-angle-up {
  //   width: 16px;
  //   height: 20px;
  //   // margin: 0 0 33px 24px;
  //   color: $color-cards-text;
  // }
  & .button__create {
    width: 199px;
    height: 50px;
    margin-bottom: 30px;
    border: transparent;
    border-radius: 12px;
    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.32);
    background-color: $color-icons;
    text-transform: uppercase;
    font-family: $font-second;
    font-size: 18px;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  & .fa-address-card-o {
    width: 25px;
    height: 22px;
    font-size: 22px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    color: #ffffff;
    margin-right: 9px;
  }
  &:active {
    background-color: $color-creation-button-animation;
  }
  @media all and (min-width: 768px) {
    margin: 0;
  }
}
.confirm__share {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 20px 0 20px;
  border-top: 1px solid $color-line;
  border-bottom: 1px solid $color-line;
  align-items: center;
  &--title {
    margin: 20px 0 5px 0;
    font-family: $font-second;
    font-size: 18px;
    font-weight: 600;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: center;
    color: $color-cards-text;
  }
  &--link {
    width: 300px;
    font-family: $font-second;
    font-size: 12px;
    font-weight: 600;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    text-align: center;
    color: $color-icons;
  }
  & .button__share {
    width: 181px;
    height: 30px;
    margin: 10px 0 30px 0;
    border-radius: 3px;
    border: transparent;
    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.32);
    background-color: $color-twitter;
    font-family: $font-second;
    font-size: 14px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.43;
    letter-spacing: normal;
    color: white;
    display: flex;
    justify-content: space-around;
    align-items: center;
  }
  & .fa-twitter {
    width: 18px;
    height: 18px;
    margin-bottom: 5px;
    font-size: 18px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: center;
    color: white;
  }
  @media all and (min-width: 768px) {
    margin: 0;
  }
}
.rectangle {
  height: 30px;
  @media all and (min-width: 768px) {
    display: none;
  }
}
//due to the new div collapsable content
.share-divs {
  display: flex;
  flex-direction: column;
  align-items: center;
}

